--- a/index.html
+++ b/index.html
@@ -17,51 +17,46 @@
     </header>
     <nav>
       <ul>
-        <li><a href="http://www.bom.gov.au/catalogue/anon-ftp.shtml">BOM</a></li>
+        <li>
+          <a target="bom" href="http://www.bom.gov.au/catalogue/anon-ftp.shtml"
+            >BOM</a
+          >
+        </li>
       </ul>
     </nav>
     <main>
-      <div id="side" class="bg1">
-        <h2 class="f"></h2>
-        <img class="x"/>
-        <p class="media z"></p>
+      <section id="flexb" class="bg1">
+        <p class="z s bg1"></p>
         <h2 class="f"></h2>
         <img class="x" />
-        <p class="media z"></p>
+        <p class="z s bg1"></p>
         <h2 class="f"></h2>
         <img class="x" />
-        <p class="media z"></p>
+        <p class="z s bg1"></p>
         <h2 class="f"></h2>
         <img class="x" />
-        <p class="media z"></p>
+        <p class="z s bg1"></p>
         <h2 class="f"></h2>
         <img class="x" />
-        <p class="media z"></p>
+        <p class="z s bg1"></p>
         <h2 class="f"></h2>
         <img class="x" />
-        <p class="media z"></p>
+        <p class="z s bg1"></p>
         <h2 class="f"></h2>
         <img class="x" />
-        <p class="media z"></p>
-      </div>
-      <div id="swrap" class="bg1">
-        <p class="s y bg1"></p>
-        <p class="s y bg1"></p>
-        <p class="s y bg1"></p>
-        <p class="s y bg1"></p>
-        <p class="s y bg1"></p>
-        <p class="s y bg1"></p>
-        <p class="s y bg1"></p>
-      </div>
-
-      <div id="sticky" class="s"></div>
+        <p class="z s bg1"></p>
+        <h2 class="f"></h2>
+        <img class="x" />
+      </section>
+      <section id="sticky" class="s"></section>
       <article>
         <h2>Article</h2>
         <p>
           The Bureau of Meteorology makes a number of real-time forecast,
           warning and observation products and analysis charts available freely
-          via the web and FTP. Each file has a date-time stamp indicating when
-          the data file was created.
+          via the web and FTP. The Bureau's Public Access Services encompass a
+          wide range of free weather forecast, warning and information services,
+          available to the general public on a 24 hour, seven days a week basis.
         </p>
       </article>
     </main>
